--- a/translations/kangyur/translations/089-004_toh547-the_incantation_the_promise_of_manjusri.xml
+++ b/translations/kangyur/translations/089-004_toh547-the_incantation_the_promise_of_manjusri.xml
@@ -8,30 +8,27 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">’jam dpal gyis dam bcas pa</title>
                 <title type="mainTitle" xml:lang="bo">འཇམ་དཔལ་གྱིས་དམ་བཅས་པ།</title>
                 <title type="longTitle" xml:lang="en">The Dhāraṇī “Mañjuśrī’s Promise”</title>
+                <title type="longTitle" xml:lang="bo">འཇམ་དཔལ་གྱིས་དམ་བཅས་པའི་གཟུངས།</title>
                 <title type="longTitle" xml:lang="Bo-Ltn">’jam dpal gyis dam bcas pa’i
                     gzungs</title>
-                <title type="longTitle" xml:lang="bo">འཇམ་དཔལ་གྱིས་དམ་བཅས་པའི་གཟུངས།</title>
-                <title type="otherTitle" xml:lang="zh"/>
-                <author ref="eft:team-33" role="translatorMain">Translated by the Tibetan Classics
+                <author role="translatorMain" ref="eft:team-33">Translated by the Tibetan Classics
                     Translators Guild of New York<lb/>under the patronage and supervision of 84000:
                     Translating the Words of the Buddha</author>
-                <consultant role="dharmaMaster" ref="eft:person-199">Geshe Lozang
-                    Jamspal</consultant>
+                <consultant role="dharmaMaster" ref="eft:person-199">Gen Lozang Jamspal</consultant>
                 <consultant role="projectManager" ref="eft:person-375">David Mellins</consultant>
-                <author role="translatorEng" ref="eft:person-199">Geshe Lozang Jamspal</author>
                 <author role="translatorEng" ref="eft:person-375">David Mellins</author>
                 <author role="translatorEng" ref="eft:person-200">Kaia Fischer</author>
-                <author role="translatorEng" ref="eft:person-308">Erin Sperry</author>
                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
                 <editor role="copyEditor" ref="eft:person-422">George FitzHerbert</editor>
                 <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
                 <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
+                <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 1.0.0 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2">
+            <publicationStmt status="1.a">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name> is a global
                     non-profit initiative to translate all the Buddha’s words into modern languages,
@@ -54,7 +51,7 @@
             <sourceDesc>
                 <bibl key="toh547" type="text">
                     <ref>Toh 547</ref>
-                    <biblScope>Degé Kangyur vol. 89 (rgyud ’bum, pa), folios 14.a.6–14.b.1.</biblScope>
+                    <biblScope>Degé Kangyur vol. 89 (rgyud ’bum, pa), folios 14.a.6–14.b.1</biblScope>
                     <location work="UT4CZ5369" count-pages="2">
                         <volume number="89" start-page="27" end-page="28"/>
                     </location>
@@ -63,7 +60,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-15T09:36:33.292Z" user="admin">15/03/2023 09:36:33</note>
+                <note type="lastUpdated" date-time="2023-03-22T14:19:36.892Z" user="admin">22/03/2023 14:19:36</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:29:28.196Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:29:28.196Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:29:50.789Z" user="line-tofte">Auto
@@ -96,6 +93,12 @@
                     (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2" date-time="2023-03-15T09:36:29.094Z" user="line-tofte">2</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2023-03-15T09:36:29.094Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2023-03-15T09:41:57.581Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2023-03-15T09:42:17.206Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2023-03-15T09:44:48.922Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2023-03-16T13:15:56.696Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="1.a" date-time="2023-03-22T14:19:32.718Z" user="martina-cotter">1.a</note>
+                <note type="updated" update="text-version" value="1.0.0" date-time="2023-03-22T14:19:32.718Z" user="martina-cotter">First published version</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -112,7 +115,7 @@
                     with a Sanskrit praise text in the form of a dhāraṇī that resembles other
                     traditional encomiums that exult in the purity, grace, and triumph of
                     bodhisattvas. The scripture then enumerates the benefits accrued by a single
-                    recitation of this dhāraṇī, which include the purification of sins accumulated
+                    recitation of this dhāraṇī, which include the purification of evil deeds accumulated
                     over eons, and the many rewards for its extensive recitation, namely erudition,
                     exceptional powers of memorization, and finally the sight of the body of
                     Mañjuśrī himself.</p>
@@ -143,14 +146,12 @@
                         that the Tibetan translators considered the salutation to be part of the
                         dhāraṇī proper, and thus did not translate it into Tibetan. Following the
                         dhāraṇī proper, the scripture describes the benefits associated with its
-                        recitation a single time, which include the purification of sins accumulated
+                        recitation a single time, which include the purification of evil deeds accumulated
                         over eons, and then the rewards reaped by its extensive recitation, namely
                         erudition, exceptional powers of memorization, and eventually the sight of
                         the body of Mañjuśrī himself.</p>
                     <milestone unit="chunk" xml:id="UT22084-089-004-7"/>
-                    <p tid="10">A Sanskrit version of the text is to our knowledge no longer extant,
-                        and no Indian or Tibetan commentary is known to exist. It appears that the
-                        text was never translated into Chinese. The Tibetan translation lacks a
+                    <p tid="10">A Sanskrit version of the text is to our knowledge no longer extant, and it appears that the text was never translated into Chinese. The Tibetan translation lacks a
                         colophon, so we have no information about the history of its transmission or
                         the identity of its translators. Its absence from the Denkarma and
                         Phangthangma catalogs suggests that it was translated into Tibetan later
@@ -189,30 +190,23 @@
                     <p tid="27">
                         <ref cRef="F.14.a" type="folio" xml:id="UT22084-089-004-37"/>
                     </p>
-                    <p rend="mantra" tid="28">namo mañjuśriye kumārabhūtāya bodhisattvāya<note place="end" xml:id="UT22084-089-004-30"> Toh 547: <foreign xml:lang="Sa-Ltn" type="term">bodhisatvāya</foreign>.</note>
-                            mahāsattvāya<note place="end" xml:id="UT22084-089-004-31"> Toh 547:
-                                <foreign xml:lang="Sa-Ltn" type="term">mahāsatvāya</foreign>.</note>
-                        mahākaruṇikāya ||tadyathā | oṁ<note place="end" xml:id="UT22084-089-004-32">
-                            Toh 547: <foreign xml:lang="Sa-Ltn">oṃ</foreign>.</note> araje viraje
+                    <p rend="mantra" tid="28">namo mañjuśriye kumārabhūtāya bodhisattvāya
+                            mahāsattvāya mahākaruṇikāya ||tadyathā | oṁ araje viraje
                         śuddhe viśuddhe śodhani viśodhani amale vimale jaye vahini ru ru cale hūṁ
-                        hūṁ hūṁ<note place="end" xml:id="UT22084-089-004-33"> Toh 547: <foreign xml:lang="Sa-Ltn">hūṃ hūṃ hūṃ</foreign>.</note> phaṭ phaṭ phaṭ
+                        hūṁ hūṁ phaṭ phaṭ phaṭ
                             svāhā<note place="end" xml:id="UT22084-089-004-34"> Provisional
                             translation: “Homage to Mañjuśrī, the ever-youthful bodhisattva great
-                            being, one of great compassion! “[The dhāraṇī] is: <foreign xml:lang="Sa-Ltn">Oṁ</foreign>, immaculate, untainted, pure, utterly
+                            being, one of great compassion! “It is: <foreign xml:lang="Sa-Ltn">Oṁ</foreign>, immaculate, untainted, pure, utterly
                             pure, purifying one, making perfectly pure, stainless, utterly
                             stainless, and triumphant! You who convey and move with the roaring
-                            sounds <foreign xml:lang="Sa-Ltn">ru ru</foreign>, <foreign xml:lang="Sa-Ltn">hūṁ hūṁ hūṁ</foreign>, <foreign xml:lang="Sa-Ltn">phaṭ phaṭ phaṭ</foreign>, <foreign xml:lang="Sa-Ltn">svāhā</foreign>!” Our translation of the Skt. <foreign xml:lang="Sa-Ltn">ru ru cale</foreign> is tentative. If read as one
-                            word (<foreign xml:lang="Sa-Ltn">rurucale</foreign>), it could mean “you
-                            with the movements of an antelope,” something implying grace and
-                            gentleness. However, a more suitable interpretation could be that which
-                            reflects the wrathful character of the dhāraṇī (indicated by the
-                            syllables <foreign xml:lang="Sa-Ltn">hūṁ</foreign> and <foreign xml:lang="Sa-Ltn">phaṭ</foreign>). This is achieved by reading the
-                                <foreign xml:lang="Sa-Ltn">ru</foreign> (√<foreign xml:lang="Sa-Ltn">ru</foreign> = to roar) as an onomatopoeic for a roaring
-                            sound.</note>||</p>
+                            sounds <foreign xml:lang="Sa-Ltn">ru ru</foreign>, <foreign xml:lang="Sa-Ltn">hūṁ hūṁ hūṁ</foreign> <foreign xml:lang="Sa-Ltn">phaṭ phaṭ phaṭ</foreign>, <foreign xml:lang="Sa-Ltn">svāhā</foreign>!” 
+                                Our translation of the Skt. <foreign xml:lang="Sa-Ltn">ru ru cale</foreign> is tentative. 
+                                It could alternatively be interpreted as one word (<foreign xml:lang="Sa-Ltn">rurucale</foreign>), 
+                                meaning “you with the movements of an antelope,” and implying grace and gentleness.</note>||</p>
                     <milestone unit="chunk" xml:id="UT22084-089-004-35"/>
                     <p tid="29">Those who uphold, read aloud, or teach this dhāraṇī will obtain a
                         keen intellect. If they chant it a single time, they will memorize a hundred
-                        dhāraṇīs, and every single one of the sins they have accumulated over a
+                        dhāraṇīs, and every single one of the evil deeds they have accumulated over a
                         thousand eons will be purified. If they recite it a hundred thousand times,
                         they will become erudite in the five sciences. If they recite it two hundred
                         thousand times, <ref cRef="F.14.b" type="folio" xml:id="UT22084-089-004-38"/> they will retain in memory all the teachings they have heard. If they
@@ -220,7 +214,8 @@
                         Mañjuśrī.</p>
                     <milestone unit="chunk" xml:id="UT22084-089-004-36"/>
                     <trailer tid="30">This concludes <title xml:lang="en">The Dhāraṇī “Mañjuśrī’s
-                            Promise”</title>.</trailer>
+                            Promise.”</title>
+                    </trailer>
                 </div>
             </div>
         </body>
