--- a/translations/kangyur/translations/089-007_toh550,896-the_way_of_the_single_letter_mantra_of_manjusri.xml
+++ b/translations/kangyur/translations/089-007_toh550,896-the_way_of_the_single_letter_mantra_of_manjusri.xml
@@ -4,36 +4,32 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="en">The Dhāraṇī of Mañjuśrī’s Single
-                    Syllable</title>
+                <title type="mainTitle" xml:lang="en">The Procedure for Mañjuśrī's Single-Syllable Mantra</title>
+                <title type="mainTitle" xml:lang="bo">འཇམ་དཔལ་གྱི་སྔགས་ཡི་གེ་འབྲུ་གཅིག་པའི་ཆོ་ག།</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">’jam dpal gyi yi ge ’bru gcig pa’i
                     gzungs</title>
-                <title type="mainTitle" xml:lang="bo">འཇམ་དཔལ་གྱི་ཡི་གེ་འབྲུ་གཅིག་པའི་གཟུངས།</title>
-                <title type="longTitle" xml:lang="en">The Noble Procedures for Mañjuśrī’s
+                <title type="longTitle" xml:lang="en">The Noble Procedure for Mañjuśrī’s
                     Single-Syllable Mantra</title>
+                <title type="longTitle" xml:lang="bo">འཕགས་པ་འཇམ་དཔལ་གྱི་སྔགས་ཡི་གེ་འབྲུ་གཅིག་པའི་ཆོ་ག།</title>
                 <title type="longTitle" xml:lang="Bo-Ltn">’phags pa ’jam dpal gyi sngags yi ge ’bru
                     gcig pa’i cho ga</title>
-                <title type="longTitle" xml:lang="bo">འཕགས་པ་འཇམ་དཔལ་གྱི་སྔགས་ཡི་གེ་འབྲུ་གཅིག་པའི་ཆོ་ག།</title>
-                <title type="otherTitle" xml:lang="zh"/>
-                <author ref="eft:team-33" role="translatorMain">Translated by the Tibetan Classics
+                <author role="translatorMain" ref="eft:team-33">Translated by the Tibetan Classics
                     Translators Guild of New York</author>
-                <consultant role="dharmaMaster" ref="eft:person-199">Geshe Lozang
-                    Jamspal</consultant>
+                <consultant role="dharmaMaster" ref="eft:person-199">Gen Lozang Jamspal</consultant>
                 <consultant role="projectManager" ref="eft:person-375">David Mellins</consultant>
                 <author role="translatorEng" ref="eft:person-375">David Mellins</author>
-                <author role="translatorEng" ref="eft:person-308">Erin Sperry</author>
-                <author role="translatorEng" ref="eft:person-199">Geshe Lozang Jamspal</author>
                 <author role="translatorEng" ref="eft:person-200">Kaia Fischer</author>
                 <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
                 <editor role="copyEditor" ref="eft:person-422">George FitzHerbert</editor>
                 <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
                 <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
+                <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 1.0.0 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2">
+            <publicationStmt status="1.a">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name> is a global
                     non-profit initiative to translate all the Buddha’s words into modern languages,
@@ -51,13 +47,13 @@
                 <idno xml:id="UT22084-089-007"/>
                 <note>An early mistake in the assigning of UT numbers within the 84000 project means
                     that these ids diverge slightly from the standard logic.</note>
-                <date>2023-03-11</date>
+                <date>2023-03-22</date>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh550" type="text">
                     <ref>Toh 550</ref>
                     <biblScope>Degé Kangyur vol. 89 (rgyud ’bum, pa), folios
-                        14.b.7–15.a.4.</biblScope>
+                        14.b.7–15.a.4</biblScope>
                     <location work="UT4CZ5369" count-pages="2">
                         <volume number="89" start-page="28" end-page="29"/>
                     </location>
@@ -67,7 +63,7 @@
                 <bibl key="toh896" type="text">
                     <ref>Toh 896</ref>
                     <biblScope>Degé Kangyur vol. 100 (gzungs, e), folios
-                        168.a.2–168.a.6.</biblScope>
+                        168.a.2–168.a.6</biblScope>
                     <location work="UT4CZ5369" count-pages="1">
                         <volume number="101" start-page="333" end-page="334"/>
                     </location>
@@ -76,7 +72,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-15T09:38:48.658Z" user="admin">15/03/2023 09:38:48</note>
+                <note type="lastUpdated" date-time="2023-03-22T14:29:50.198Z" user="admin">22/03/2023 14:29:50</note>
                 <note type="updated" update="translation-status" value="3" date-time="2021-07-29T15:39:53.257Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-07-29T15:39:53.257Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-29T15:40:14.374Z" user="line-tofte">Auto
@@ -109,6 +105,10 @@
                     (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2" date-time="2023-03-15T09:38:44.465Z" user="line-tofte">2</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2023-03-15T09:38:44.465Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2023-03-15T09:46:43.487Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2023-03-16T13:19:14.807Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="1.a" date-time="2023-03-22T14:29:45.911Z" user="martina-cotter">1.a</note>
+                <note type="updated" update="text-version" value="1.0.0" date-time="2023-03-22T14:29:45.911Z" user="martina-cotter">First published version</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -121,7 +121,7 @@
                 <head type="summary" tid="1">Summary</head>
                 <milestone unit="chunk" xml:id="UT22084-089-007-1"/>
                 <p tid="2">
-                    <title xml:lang="en">The Dhāraṇī of Mañjuśrī’s Single Syllable</title> is
+                    <title xml:lang="en">The Procedure for Mañjuśrī's Single-Syllable Mantra</title> is
                     a pithy text extolling an exceedingly secret and potent single-syllable mantra.
                     Following a note regarding its universal efficacy, the remaining portion of the
                     text outlines ritual applications for the remediation of specific ailments
@@ -147,27 +147,29 @@
                 <head type="introduction" tid="8">Introduction</head>
                 <div type="section" xml:id="UT22084-089-007-introduction-1">
                 <milestone unit="chunk" xml:id="UT22084-089-007-6"/>
-                <p tid="9">
-                        <title xml:lang="en">The Dhāraṇī of Mañjuśrī’s Single Syllable</title>
+                    <p tid="9">
+                        <title xml:lang="en">The Procedure for Mañjuśrī's Single-Syllable Mantra</title>
+                        <note place="end" xml:id="UT22084-089-007-42">This is the title given at the beginning of the text in all versions of the Kangyur consulted. The colophon, however, titles it The <title xml:lang="Sa-Ltn">Dhāraṇī of Mañjuśrī's Single Syllable</title> 
+                        (<foreign xml:lang="Bo-Ltn">’jam dpal gyi yi ge ’bru gcig pa'i gzungs</foreign>).</note>
                     appears as the final of six dhāraṇī scriptures (Toh 545–550) gathered together
                     within the Tantra section of the Degé Kangyur that provide instruction in
-                    incantatory practices focused on the bodhisattva Mañjuśrī. Five of these
+                    incantatory practices that feature the bodhisattva Mañjuśrī. Five of these
                     scriptures (Toh 547 omitted) also appear in the Dhāraṇī section of the Degé
-                    Kangyur as Toh 892–896. It is the pithiest of the canonical Mañjuśrī dhāraṇīs
+                    Kangyur as Toh 892–896. This is the pithiest of the canonical Mañjuśrī dhāraṇīs
                     and includes neither Sanskrit title nor an opening salutation. </p>
                 <milestone unit="chunk" xml:id="UT22084-089-007-7"/>
-                <p tid="10">As preserved in the Degé Kangyur, the scripture begins simply with a
+                <p tid="10">The scripture begins simply with a
                     statement of the Tibetan title, followed by the prefatory expression <foreign xml:lang="Sa-Ltn" type="term">tadyathā</foreign>, the introductory mantra
-                    syllable <mantra xml:lang="Sa-Ltn" type="syllable">oṃ</mantra>, and
-                    then the single syllable <mantra xml:lang="Sa-Ltn" type="syllable">kṣṇīṃ</mantra>. The dhāraṇī is then extolled as being both exceedingly
+                    syllable <mantra xml:lang="Sa-Ltn" type="syllable">oṁ</mantra>, and
+                    then the single syllable <mantra xml:lang="Sa-Ltn" type="syllable">kṣṇīṃ</mantra>.<note place="end" xml:id="UT22084-089-007-43">Chapter Nine of <title xml:lang="en">
+                                <ptr target="https://read.84000.co/translation/toh543.html#UT22084-088-038-chapter-9">The Root Manual of the Rites of Mañjuśrī</ptr>
+                            </title> is dedicated to a similarly potent single-syllable mantra of Mañjuśrī. In that text, which is extant in Sanskrit, the single-syllable mantra is <foreign xml:lang="Sa-Ltn">kḷlhīṁ</foreign>.</note> The dhāraṇī is then extolled as being both exceedingly
                     secret and potent. After praising its universal efficacy, the remainder of the
                     text outlines a series of ritual applications to remedy specific ailments,
                     involving the consecration of common items as sacral implements in rites of
                     healing.</p>
                 <milestone unit="chunk" xml:id="UT22084-089-007-8"/>
-                <p tid="11">A Sanskrit version of this text is to our knowledge no longer extant,
-                    and the Tibetan lacks a colophon that might have offered information about the
-                    history of its transmission or the identity of its translators. Its absence from
+                <p tid="11">A Sanskrit version of the text is to our knowledge no longer extant, and it appears that the text was never translated into Chinese. The Tibetan translation lacks a colophon that might have offered information about the history of its transmission or the identity of its translators. Its absence from
                     the Denkarma and Phangthangma imperial catalogs suggests that it was translated
                     into Tibetan later than the beginning of the ninth century <hi rend="small-caps">ce</hi>,<note place="end" xml:id="UT22084-089-007-9">The Denkarma catalog is usually dated to ca. 812 <hi rend="small-caps">ce</hi>
                         </note> but before the
@@ -175,9 +177,8 @@
                     Tibetan title, along with those of the other texts in this collection (Toh
                     545–550), in his <title xml:lang="en">History of Buddhism</title>.<note place="end" xml:id="UT22084-089-007-10">Butön Rinchen Drup
                         (<foreign xml:lang="Bo-Ltn">bu ston rin chen grub</foreign>), <title xml:lang="Bo-Ltn">chos ’byung</title>, folio 172.a/p.
-                        975.</note> No commentary on <title xml:lang="en">The Dhāraṇī of
-                        Mañjuśrī’s Single Syllable</title> has been identified, and to our knowledge
-                    the scripture was never translated into Chinese.</p>
+                        975.</note>
+                    </p>
                 <milestone unit="chunk" xml:id="UT22084-089-007-11"/>
                 <p tid="12">This English translation is based on the two versions in the Degé
                     Kangyur, one in the Tantra section (Toh 550) and the other in the Dhāraṇī
@@ -190,8 +191,8 @@
         <body>
             <div type="translation">
                 <head type="translation" tid="13">The Translation</head>
-                <head type="titleHon" tid="14"/>
-                <head type="titleMain" tid="15">The Dhāraṇī of Mañjuśrī’s Single Syllable</head>
+                <head type="titleHon" tid="14">The Noble</head>
+                <head type="titleMain" tid="15">Procedure for Mañjuśrī's Single-Syllable Mantra</head>
                 <!--In the rare case that there is initial text before the first chapter begins, the script will place the
                         text here. However, this will cause the two headings for the "Honorific Title" and "Main Title" to be duplicated below
                         as <p> elements. Markup Editors, please delete these initial duplicated <p> elements along with their milestones and delete this comment.-->
@@ -199,19 +200,17 @@
                     <milestone unit="chunk" xml:id="UT22084-089-007-12"/>
                     <p tid="17">
                         <ref key="toh550" cRef="F.14.b" type="folio" xml:id="UT22084-089-007-39"/> <ref key="toh896" cRef="F.14.b" type="folio" xml:id="UT22084-089-007-40"/> <mantra xml:lang="Sa-Ltn">tadyathā | oṁ kṣṇīṁ ||</mantra>
-                        <note place="end" xml:id="UT22084-089-007-13"> Provisional translation: “[The
-                            dhāraṇī] is: <mantra xml:lang="Sa-Ltn" type="syllable">oṃ
+                        <note place="end" xml:id="UT22084-089-007-13"> Provisional translation: “It is: <mantra xml:lang="Sa-Ltn" type="syllable">oṃ
                             kṣṇīṁ</mantra>.” </note>
                     </p>
+                    <lb/>
                     <milestone unit="chunk" xml:id="UT22084-089-007-14"/>
                     <p tid="18">This single-syllable mantra is exceedingly secret, <ref key="toh550" cRef="F.15.a" type="folio" xml:id="UT22084-089-007-41"/> for it
                         accomplishes every aim and performs every action. As the essence of all the
                         tathāgatas, it fulfills all hopes.</p>
                     <milestone unit="chunk" xml:id="UT22084-089-007-15"/>
-                    <p tid="19">Holding a toothpick consecrated with the mantra<note place="end" xml:id="UT22084-089-007-16"> “Consecrated (with this mantra)” for the
-                            Tibetan <foreign xml:lang="Bo-Ltn" type="term">bsngags</foreign>,
-                            following Hackett (2019), p. 120.</note> will cure toothache. Sea salt
-                        consecrated seven times with the mantra, when applied to the
+                    <p tid="19">Holding a tooth stick incanted with the mantra will cure toothache. Sea salt
+                        incanted seven times with the mantra, when applied to the
                         eyes, will cure eye disease.</p>
                     <milestone unit="chunk" xml:id="UT22084-089-007-17"/>
                     <p tid="20">If a person has a weapon fragment lodged inside of them, consecrate
@@ -219,21 +218,20 @@
                         and give it to them to drink, or apply it to the wound, and the fragment
                         will be expelled.</p>
                     <milestone unit="chunk" xml:id="UT22084-089-007-18"/>
-                    <p tid="21">Indigestion, bloating, cholera, and feverish diarrhea will be cured
+                    <p tid="21">Indigestion, swelling, dysentery, and feverish diarrhea will be cured
                         by eating <foreign xml:lang="Bo-Ltn" type="term">mu rang
                             salt,</foreign>
                         <note place="end" xml:id="UT22084-089-007-19">
                                 “<foreign xml:lang="Bo-Ltn" type="term">mu rang</foreign> salt,” for
                             unfamiliar <foreign xml:lang="Bo-Ltn" type="term">mu rang
-                                tshwa</foreign>.</note> sea salt, or any other suitable rock salt
-                        consecrated seven times with the mantra, and recovery will be the very same
+                                tshwa</foreign>. This may be a transliteration of the Skt. <foreign xml:lang="Sa-Ltn">muraṅgī</foreign>, and thus refer to the refined products of <foreign xml:lang="la">Moringa oleifera</foreign>, which have both culinary and medicinal applications.</note> sea salt, or any other suitable rock salt
+                        incanted seven times with the mantra, and recovery will be the very same
                         day.</p>
                     <milestone unit="chunk" xml:id="UT22084-089-007-20"/>
-                    <p tid="22">Sweeping motions made with a raven’s feather consecrated seven times
+                    <p tid="22">Sweeping motions made with a raven’s feather incanted seven times
                         with the mantra will heal illnesses of the brain.</p>
                     <milestone unit="chunk" xml:id="UT22084-089-007-21"/>
-                    <trailer tid="23">This concludes <title xml:lang="en">The Dhāraṇī of Mañjuśrī’s
-                            Single Syllable</title>.
+                    <trailer tid="23">This concludes the noble <title xml:lang="en">“Procedure for Mañjuśrī’s Single-Syllable Mantra.”</title>
                     </trailer>
                 </div>
             </div>
@@ -311,8 +309,6 @@
                             <term xml:lang="Bo-Ltn" status="verified">gzungs </term>
                             <term xml:lang="bo">གཟུངས།</term>
                             <term xml:lang="Sa-Ltn" status="verified">dhāraṇī</term>
-                            <term type="definition">A verbal formula that is recited to achieve
-                                temporal and spiritual goals. </term>
                             <term type="alternative">dhāraṇī</term>
                         </gloss>
                     </item>
