--- a/translations/kangyur/placeholders/050-003_toh112-the_white_lotus_of_compassion.xml
+++ b/translations/kangyur/placeholders/050-003_toh112-the_white_lotus_of_compassion.xml
@@ -21,14 +21,15 @@
                 <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
                 <editor role="proofreader" ref="eft:person-143">Emily Bower</editor>
                 <editor role="copyEditor" ref="eft:person-249">Konchog Norbu</editor>
+                <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
                 <sponsor ref="sponsors.xml#sponsor-8">anonymous</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.11 <date>2019</date>
+                <edition>v 0.1.13 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.c">
+            <publicationStmt status="2.b">
                 <idno xml:id="UT22084-050-003"/>
                 <date/>
             </publicationStmt>
@@ -44,7 +45,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-15T14:37:54.302Z" user="admin">15/03/2023 14:37:54</note>
+                <note type="lastUpdated" date-time="2023-03-23T08:02:46.291Z" user="admin">23/03/2023 08:02:46</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-10-22T06:04:52.426Z" user="andreas">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:12:23.349Z" user="mike">2.d</note>
                 <note type="updated" update="text-version" value="0.1.1" date-time="2021-04-15T09:04:52.552Z" user="line-tofte">Auto (update-contributors)</note>
@@ -59,6 +60,9 @@
                 <note type="updated" update="text-version" value="0.1.10" date-time="2022-08-30T11:00:52.939Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.c" date-time="2023-03-15T14:37:50.045Z" user="line-tofte">2.c</note>
                 <note type="updated" update="text-version" value="0.1.11" date-time="2023-03-15T14:37:50.045Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.1.12" date-time="2023-03-15T14:38:43.895Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.b" date-time="2023-03-23T08:02:41.937Z" user="line-tofte">2.b</note>
+                <note type="updated" update="text-version" value="0.1.13" date-time="2023-03-23T08:02:41.937Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
