--- a/translations/kangyur/placeholders/035-012_toh44-12-chapter_12_the_buddha.xml
+++ b/translations/kangyur/placeholders/035-012_toh44-12-chapter_12_the_buddha.xml
@@ -17,11 +17,11 @@
                 <sponsor ref="sponsors.xml#sponsor-193">Nicholas Weeks</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2020</date>
+                <edition>v 0.0.5 <date>2020</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.h">
+            <publicationStmt status="2.g">
                 <idno xml:id="UT22084-035-012"/>
                 <date/>
             </publicationStmt>
@@ -37,7 +37,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-11-09T15:06:44.147Z" user="admin">09/11/2022 15:06:44</note>
+                <note type="lastUpdated" date-time="2023-03-23T14:28:45.22Z" user="admin">23/03/2023 14:28:45</note>
                 <note type="updated" update="text-version" value="" date-time="2019-03-09T12:27:25.516Z" user="john"/>
                 <note type="updated" update="translation-status" value="3" date-time="2019-03-09T12:27:25.516Z" user="john">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-01-10T07:02:08.499Z" user="andreas">0.0.1</note>
@@ -45,6 +45,8 @@
                 <note type="updated" update="translation-status" value="2.h" date-time="2022-11-09T15:05:14.52Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-11-09T15:05:14.52Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.4" date-time="2022-11-09T15:06:37.345Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2023-03-23T14:28:40.978Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2023-03-23T14:28:40.978Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
