--- a/translations/kangyur/placeholders/101-079_toh1024-the_incantation_for_calming_suffering.xml
+++ b/translations/kangyur/placeholders/101-079_toh1024-the_incantation_for_calming_suffering.xml
@@ -13,10 +13,10 @@
                 <author role="translatorEng" ref="eft:person-61">Catherine Dalton</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2022</date>
+                <edition>v 0.0.4 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.h">
+            <publicationStmt status="2.g">
                 <idno xml:id="UT22084-101-079"/>
                 <date/>
             </publicationStmt>
@@ -32,7 +32,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-04-25T13:05:22.204Z" user="admin">25/04/2022 13:05:22</note>    <note type="updated" update="translation-status" value="3" date-time="2022-04-13T12:58:31.89Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-04-13T12:58:31.89Z" user="line-tofte">0.0.1</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-13T12:58:54.867Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-04-25T13:05:14.522Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-04-25T13:05:14.522Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2023-03-23T14:32:28.923Z" user="admin">23/03/2023 14:32:28</note>    <note type="updated" update="translation-status" value="3" date-time="2022-04-13T12:58:31.89Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-04-13T12:58:31.89Z" user="line-tofte">0.0.1</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-13T12:58:54.867Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-04-25T13:05:14.522Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-04-25T13:05:14.522Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2023-03-23T14:32:24.694Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2023-03-23T14:32:24.694Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
