--- a/translations/kangyur/translations/043-005_toh68-ascertaining_the_discipline_the_sutra_of_upalis_questions.xml
+++ b/translations/kangyur/translations/043-005_toh68-ascertaining_the_discipline_the_sutra_of_upalis_questions.xml
@@ -31,7 +31,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-250">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.2.7 <date>2022</date>
+                <edition>v 1.2.8 <date>2022</date>
                 </edition>
             </editionStmt>
 
@@ -64,7 +64,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-21T18:01:35.128Z" user="admin">21/03/2023 18:01:35</note>
+                <note type="lastUpdated" date-time="2023-03-24T05:04:33.53Z" user="admin">24/03/2023 05:04:33</note>
 
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-11-06T13:11:59.611Z" user="andreas">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2019-11-06T13:11:59.611Z" user="andreas">2.g</note>
@@ -117,6 +117,7 @@
     <note type="updated" update="text-version" value="1.2.5" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
     <note type="updated" update="text-version" value="1.2.6" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
     <note type="updated" update="text-version" value="1.2.7" date-time="2023-03-21T18:01:32.218Z" user="john">Typo fixed, line break spaces added in intro.</note>
+    <note type="updated" update="text-version" value="1.2.8" date-time="2023-03-24T05:04:30.734Z" user="martina-cotter">edited milestone.</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -199,7 +200,7 @@
                             (<title xml:lang="Sa-Ltn">Ratnakūṭa</title>) section of the Kangyur,
                             has been extensively studied and translated from Chinese and Tibetan in Nattier 2003.</note> serves as one of the
                         principal canonical sources for the rite, but the rite presented here 
-                        (<ptr target="#UT22084-043-005-94"/>–<ptr target="#UT22084-043-005-111"/>) is distinctive for the set of thirty-five buddhas before
+                        (<ptr target="#UT22084-043-005-91"/>–<ptr target="#UT22084-043-005-111"/>) is distinctive for the set of thirty-five buddhas before
                         which bodhisattvas are directed to make their confession. That the “Three Sections” became an important practice in Indian
                         Buddhism is attested by the fact that it is referenced in Śāntideva’s <title xml:lang="Sa-Ltn">Śikṣāsamuccaya</title>
                         <ref rend="pending" target="https://read.84000.co/translation/toh3940.html"/>
