--- a/translations/kangyur/placeholders/071-007_toh293-the_great_sutra_on_the_best_banner.xml
+++ b/translations/kangyur/placeholders/071-007_toh293-the_great_sutra_on_the_best_banner.xml
@@ -13,10 +13,10 @@
                 <author role="translatorEng" ref="eft:person-383">Adam T. Miller</author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.7 <date>2021</date>
+                <edition>v 0.0.8 <date>2021</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.h">
+            <publicationStmt status="2.g">
                 <idno xml:id="UT22084-071-007"/>
                 <date/>
             </publicationStmt>
@@ -32,7 +32,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-12-26T18:17:11.333Z" user="admin">26/12/2021 18:17:11</note>
+                <note type="lastUpdated" date-time="2023-03-24T13:06:06.624Z" user="admin">24/03/2023 13:06:06</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-10-15T11:29:14.616Z" user="andreas">0.0.1</note>
                 <note type="updated" update="translation-status" value="4" date-time="2021-10-15T11:30:55.71Z" user="andreas">4</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-10-15T11:30:55.71Z" user="andreas">Auto (update-publication-status)</note>
@@ -42,6 +42,8 @@
                 <note type="updated" update="text-version" value="0.0.5" date-time="2021-11-19T16:28:00.756Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2021-12-10T13:36:39.621Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.6" date-time="2021-12-10T13:36:39.621Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2023-03-24T13:06:02.362Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2023-03-24T13:06:02.362Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
